hphp/hack/test/typecheck/lambda/lambda09.php.exp
File "lambda09.php", line 19, characters 12-13:
Variable `$y` is undefined, or not always defined. (Naming[2050])
File "lambda09.php", line 14, characters 3-11:
Did you mean `$x` instead?
